--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ top: 0;
 }
 
 #showAssistant {
-    display: flex;
+    display: none;
     flex-direction: row; 
     gap: 10px; 
     position: fixed; 
